// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DrawerItem with icon 1`] = `
<View>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": true,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "marginHorizontal": 10,
            "marginVertical": 4,
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 28,
          },
          Object {
            "height": 56,
            "justifyContent": "center",
            "marginLeft": 12,
            "marginRight": 12,
            "marginVertical": 0,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "padding": 8,
          },
          Object {
            "marginLeft": 16,
            "marginRight": 24,
            "padding": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
            ]
          }
        >
          □
        </Text>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            Array [
              Object {
                "color": "rgba(28, 27, 31, 1)",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "left",
              },
              Object {
                "writingDirection": "ltr",
              },
              Array [
                Object {
                  "marginRight": 32,
                },
                Object {
                  "color": "rgba(73, 69, 79, 1)",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                  "marginLeft": 12,
                },
              ],
            ]
          }
        >
          Example item
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders active DrawerItem 1`] = `
<View>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": true,
        "selected": true,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "marginHorizontal": 10,
            "marginVertical": 4,
          },
          Object {
            "backgroundColor": "rgba(232, 222, 248, 1)",
            "borderRadius": 28,
          },
          Object {
            "height": 56,
            "justifyContent": "center",
            "marginLeft": 12,
            "marginRight": 12,
            "marginVertical": 0,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "padding": 8,
          },
          Object {
            "marginLeft": 16,
            "marginRight": 24,
            "padding": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(29, 25, 43, 1)",
                "fontSize": 24,
              },
            ]
          }
        >
          □
        </Text>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            Array [
              Object {
                "color": "rgba(28, 27, 31, 1)",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "left",
              },
              Object {
                "writingDirection": "ltr",
              },
              Array [
                Object {
                  "marginRight": 32,
                },
                Object {
                  "color": "rgba(29, 25, 43, 1)",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                  "marginLeft": 12,
                },
              ],
            ]
          }
        >
          Example item
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders basic DrawerItem 1`] = `
<View>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "marginHorizontal": 10,
            "marginVertical": 4,
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 28,
          },
          Object {
            "height": 56,
            "justifyContent": "center",
            "marginLeft": 12,
            "marginRight": 12,
            "marginVertical": 0,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "padding": 8,
          },
          Object {
            "marginLeft": 16,
            "marginRight": 24,
            "padding": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            Array [
              Object {
                "color": "rgba(28, 27, 31, 1)",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "left",
              },
              Object {
                "writingDirection": "ltr",
              },
              Array [
                Object {
                  "marginRight": 32,
                },
                Object {
                  "color": "rgba(73, 69, 79, 1)",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                  "marginLeft": 0,
                },
              ],
            ]
          }
        >
          Example item
        </Text>
      </View>
    </View>
  </View>
</View>
`;
